Fix some spacing issues

--- a/app/styles/courses/enrollments-view.sass
+++ b/app/styles/courses/enrollments-view.sass
@@ -28,9 +28,11 @@
   .share-details .share-licenses-link
     color: black
     text-decoration: underline
-  
+
+  .prepaid-card-container
+    height: 309px
+
   .share-details
-    height: 5em
     text-align: right
   
   .how-to-enroll
